--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Cc's Blog
 email: zchan0@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "https://zchan0.github.io/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://minesecret.space/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # social accounts
 twitter_username: zcchan0
