--- a/_config.yml
+++ b/_config.yml
@@ -13,11 +13,11 @@
 # you will see them accessed via {{ site.title }}, {{ site.email }}, and so on.
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
-title: Cc's Blog
+title: Cc's Playground
 email: zchan0@outlook.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "http://minesecret.space/" # the base hostname & protocol for your site, e.g. http://example.com
+url: "https://blog.minesecret.space/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # social accounts
 twitter_username: zcchan0
