--- a/_config.yml
+++ b/_config.yml
@@ -14,13 +14,13 @@
 # You can create any custom variable you would like, and they will be accessible
 # in the templates via {{ site.myvariable }}.
 title: Cc's Blog
-email: zhengcc124@gmail.com
+email: zhengcencen@gmail.com
 description: >- # this means to ignore newlines until "baseurl:"
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "https://zhengcc.me/" # the base hostname & protocol for your site, e.g. http://example.com
 
 # social accounts
-twitter_username: zcchan0
+twitter_username: cisssyz
 github_username:  zchan0
 
 # disqus
